2018-05-31  Mark Wielaard  <mark@klomp.org>

	* run-readelf-types.sh: New test.
	* Makefile.am (TESTS): Add run-readelf-types.sh.
	(EXTRA_DIST): Likewise.

2018-05-31  Mark Wielaard  <mark@klomp.org>

	* splitdwarf4-not-split4.dwo.bz2: New test file.
	* testfile-splitdwarf4-not-split4.debug.bz2: Likewise.
	* run-readelf-loc.sh: Add test for splitdwarf4-not-split4.dwo
	and testfile-splitdwarf4-not-split4.debug.
	* run-varlocs.sh: Test testfile-splitdwarf4-not-split4.debug.
	* Makefile.am (EXTRA_DIST): Add splitdwarf4-not-split4.dwo.bz2
	and testfile-splitdwarf4-not-split4.debug.bz2.

2018-05-31  Mark Wielaard  <mark@klomp.org>

	* test-subr.sh (self_test_files): Split into self_test_files_exe,
	self_test_files_lib and self_test_obj.
	(testrun_on_self_exe): New function.
	(testrun_on_self_lib): Likewise.
	* run-get-units-split.sh: Replace testrun_on_self with
	testrun_on_self_exe and testrun_on_self_lib.
	* run-unit-info.sh: Likewise.

2018-05-31  Mark Wielaard  <mark@klomp.org>

	* low_high_pc.c (handle_die): Handle NULL name. Print offset and
	name of die.
	(main): Check if the cu DIE is a skeleton, then get and handle
	the split subdie.
	* run-low-high-pc.sh: Run on testfile-splitdwarf-4 and
	testfile-splitdwarf-5. Run on all selftest files.

2018-05-31  Mark Wielaard  <mark@klomp.org>

	* get-units-invalid.c (main): Check dwarf_cuoffset and
	dwarf_dieoffset.

2018-05-29  Mark Wielaard  <mark@klomp.org>

	* dwarf-die-addr-die.c (check_dbg): Also check subdies, split or
	type, gotten through dwarf_get_units.
	* run-dwarf-die-addr-die.sh: Add tests for dwarf-4, dwarf-5,
	split-dwarf-4, split-dwarf-5 and dwo files.

2018-05-29  Mark Wielaard  <mark@klomp.org>

	* run-readelf-loc.sh: Add GNU DebugFission split-dwarf variant.
	* run-varlocs.sh: Likewise.

2018-05-29  Mark Wielaard  <mark@klomp.org>

	* run-readelf-twofiles.sh: Add --debug-dump=loc testcase.

2018-05-28  Mark Wielaard  <mark@klomp.org>

	* run-readelf-info-plus.sh: New test.